test/src/e2e_vm_tests/test_programs/should_fail/abi_associated_const_missing_type_ascription/src/main.sw
script;

abi ConstantId {
    const ID;
}

fn main() -> u32 {
  0
}
